--- a/templates/product/product_get.html
+++ b/templates/product/product_get.html
@@ -92,8 +92,7 @@ Product Get Page
                 <div class="col-10">
                     <div class="col-10 mx-auto" style="margin-top: 50px;">
                         <h1 class="display-6 text-center">Product Details</h1>
-                        <div class="col-10 mx-auto mb-4">
-                            <img src="{{ url_for('static', filename='qr_code/' + product.qr_code) }}" alt="QR Code" style="width: 200px; height: 200px;" class="mx-auto d-block my-4">
+                        <div class="col-10 mx-auto mb-4 mt-5">
                             <table class="table table-bordered">
                                 <tr>
                                     <th>Title</th>
