--- a/templates/invoice/invoice_print.html
+++ b/templates/invoice/invoice_print.html
@@ -12,26 +12,33 @@ Invoice Print Page
                             <div id="section-to-print" class="d-block my-3 py-3 border p-2">
                                 <h1 class="text-center">Gold House</h1>
                                 <hr>
-                                <h6><b>Invoice Number</b><span class="float-right">{{ invoice.invoice_number }}</span></h6>
-                                <p><b>Total Price</b><span class="float-right">{{ product_total_price }}</span></p>
+                                <h6><b>Invoice ID</b><span class="float-right">{{ invoice.invoice_number }}</span></h6>
+                                <p><b>Total Price</b><span class="float-right">{{ product_total_price|round(2) }}</span></p>
                                 <p><b>Product Total Count</b><span class="float-right">{{ invoice_product_list|length }}</span></p>
-                                <p><b>Product Total Gramm</b><span class="float-right">{{ product_total_gramm }}</span></p>
+                                <p><b>Product Total Gramm</b><span class="float-right">{{ product_total_gramm|round(2) }}</span></p>
                                 <p><b>Dealer Name</b><span class="float-right">{{ user.full_name }}</span></p>
                                 <p><b>Dealer Phone</b><span class="float-right">{{ user.phone_number }}</span></p>
                                 <hr>
-                                <h4 class="text-center">Product List</h4>
+                                <h4 class="text-center">Type List</h4>
                                 <hr>
-                                {% for invoice_product in invoice_product_list %}
-                                    {% for product in product_list %}
-                                        {% if invoice_product.product_id == product.id %}
-                                        <p><b>Product Title</b><span class="float-right">{{ product.title }}</span></p>
-                                        <p><b>Product Gramm</b><span class="float-right">{{ product.gramm }}</span></p>
-                                        <p><b>Product Proba</b><span class="float-right">{{ product.proba }}</span></p>
-                                        <p><b>Product Type</b><span class="float-right">{{ product.type }}</span></p>
-                                        <p><b>Product Price</b><span class="float-right">{{ product.price }}</span></p>
-                                        <hr>
-                                        {% endif %}
+                                {% for salary in salary_list %}
+                                    {% set salary_total_gramm = namespace(total=0) %}
+                                    {% set salary_total_price = namespace(total=0) %}
+                                    {% set total_count = namespace(total=0) %}
+                                    {% for invoice_product in invoice_product_list %}    
+                                        {% for product in product_list %}
+                                            {% if invoice_product.product_id == product.id and salary.type == product.type %}
+                                                {% set salary_total_gramm.total = salary_total_gramm.total + product.gramm %}
+                                                {% set salary_total_price.total = salary_total_price.total + product.price %}
+                                                {% set total_count.total = total_count.total + 1 %}
+                                            {% endif %}
+                                        {% endfor %}
                                     {% endfor %}
+                                    <p><b>Type</b><span class="float-right">{{ salary.type }}</span></p>
+                                    <p><b>Total Gramm</b><span class="float-right">{{ salary_total_gramm.total|round(2) }}</span></p>
+                                    <p><b>Total Price</b><span class="float-right">{{ salary_total_price.total|round(2) }}</span></p>
+                                    <p><b>Total Count</b><span class="float-right">{{ total_count.total|round(2) }}</span></p>
+                                    <hr>
                                 {% endfor %}
                                 <p class="text-center text-small text-muted">Created At | {{ invoice.created_at.strftime('%Y-%m-%d %H:%M:%S') }}</p>
                             </div>
