--- a/templates/product/product_list.html
+++ b/templates/product/product_list.html
@@ -92,9 +92,23 @@ Product List Page
                 <div class="col-10">
                     <div class="w-100 mx-auto" style="margin-top: 50px;">
                         <div class="w-100 mx-auto d-flex justify-content-between align-items-center">
-                            <h2>{{ product_total_gramm }}</h2>
-                            <h2>{{ product_total_price }}</h2>
+                            <h2>Total Gramm: {{ product_total_gramm }}</h2>
+                            <h2>Total Price: {{ product_total_price }}</h2>
                         </div>
+                        {% for salary in salary_list %}
+                            {% set salary_total_gramm = namespace(total=0) %}
+                            {% set salary_total_price = namespace(total=0) %}
+                            {% for product in product_list %}
+                                {% if salary.type == product.type %}
+                                    {% set salary_total_gramm.total = salary_total_gramm.total + product.gramm %}
+                                    {% set salary_total_price.total = salary_total_price.total + product.price %}
+                                {% endif %}
+                            {% endfor %}
+                            <div class="w-100 mx-auto d-flex justify-content-between align-items-center">
+                                <h2>Total Gramm {{ salary.type }}: {{ salary_total_gramm.total|round(2) }}</h2>
+                                <h2>Total Price {{ salary.type }}: {{ salary_total_price.total|round(2) }}</h2>
+                            </div>
+                        {% endfor %}
                         <div class="w-100 mx-auto">
                             <form class="form-inline my-4 float-left" method="get" action="{{ url_for('product_list_page', query=name) }}">
                                 <select name="select_type" id="select_type" class="form-control mr-sm-2" onchange="this.form.submit()">
@@ -105,16 +119,25 @@ Product List Page
                                     <option value="SOLD">SOLD</option>
                                 </select>
                             </form>
-                            <form class="form-inline my-4 float-right" method="get" action="{{ url_for('product_list_page', query=name) }}">
+                            <form class="form-inline my-4 float-left" method="get" action="{{ url_for('product_list_page', query=name) }}">
+                                <label class="sr-only" for="inlineFormInputName2">Search Gramm</label>
+                                <input class="form-control mr-sm-2" type="search" placeholder="Search Gramm" aria-label="Search" name="search-gramm">
+                                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search Gramm</button>
+                            </form>
+                            <form class="form-inline my-4 float-right ml-2" method="get" action="{{ url_for('product_list_page', query=name) }}">
                                 <label class="sr-only" for="inlineFormInputName2">Search</label>
                                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="search">
                                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                            </form>
+                            <form class="form-inline my-4 float-right" method="get" action="{{ url_for('product_create_page') }}">
+                                <label class="sr-only" for="inlineFormInputName2">Enter id</label>
+                                <input class="form-control mr-sm-2" type="number" placeholder="Enter ID" aria-label="Search" name="id" autofocus>
+                                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Send</button>
                             </form>
                         </div>
                         <table class="table table-hover table-bordered">
                             <tr>
                                 <th>#</th>
-                                <th>QR</th>
                                 <th>Title</th>
                                 <th>Gramm</th>
                                 <th>Proba</th>
@@ -124,17 +147,13 @@ Product List Page
                                 <th>Status</th>
                                 <th>Price</th>
                                 <th>Created At</th>
-                                <th>
-                                    Action
-                                    <a href="{{ url_for('product_create_page') }}" class="btn btn-success float-right">Add</a>
+                                <th>Action
+                                    <a href="{{ url_for('product_delete_all_page') }}" class="btn btn-danger float-right">All Delete</a>
                                 </th>
                             </tr>
                             {% for product in product_list %}
                                 <tr>
                                     <td>{{ loop.index }}</td>
-                                    <td>
-                                        <img src="{{ url_for('static', filename='qr_code/' + product.qr_code) }}" alt="QR Code" style="width: 50px; height: 50px;">
-                                    </td>
                                     <td>{{ product.title }}</td>
                                     <td>{{ product.gramm }}</td>
                                     <td>{{ product.proba }}</td>
@@ -146,15 +165,13 @@ Product List Page
                                     <td>{{ product.created_at.strftime('%Y-%m-%d %H:%M:%S') }}</td>
                                     <td>
                                         <a href="{{ url_for('product_delete_page', product_id=product.id) }}" class="btn btn-danger">Delete</a>
-                                        <a href="{{ url_for('product_update_page', product_id=product.id) }}" class="btn btn-warning">Update</a>
                                         <a href="{{ url_for('product_get_page', product_id=product.id) }}" class="btn btn-primary">Get</a>
-                                        <a href="{{ url_for('product_print_page', product_id=product.id) }}" class="btn btn-success">Print</a>
                                     </td>
                                 </tr>
                             {% endfor %}
                             {% if product_list|length == 0 %}
                                 <tr>
-                                    <td colspan="11" class="text-center">No products found.</td>
+                                    <td colspan="10" class="text-center">No products found.</td>
                                 </tr>
                             {% endif %}
                         </table>
