--- a/templates/user/client_list.html
+++ b/templates/user/client_list.html
@@ -62,16 +62,33 @@ Client List Page
                     </div>
                 </div>
                 <div class="col-10">
-                    <div class="col-12 mx-auto" style="margin-top: 150px;">
+                    <div class="col-12 mx-auto" style="margin-top: 50px;">
+                        <div class="w-100 mx-auto">
+                            {% set client_total = namespace(total=0) %}
+                            {% for client_debt in client_debt_list %}
+                                {% set client_total.total = client_total.total + client_debt.lom %}
+                            {% endfor %}
+                            <h1>{{ client_total.total|round(2) }}</h1>
+                        </div>
+                        <div class="w-100 mx-auto">
+                            <form class="form-inline my-4 float-right" method="get" action="{{ url_for('client_list_page', query=name) }}">
+                                <label class="sr-only" for="inlineFormInputName2">Search</label>
+                                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="search" autofocus>
+                                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                            </form>
+                        </div>
                         <table class="table table-hover table-bordered">
                             <tr>
                                 <th>#</th>
                                 <th>Full Name</th>
-                                <th>Phone Number</th>
+                                <th>Total</th>
                                 <th>Role</th>
                                 <th>Created At</th>
+                                <th>Phone Number</th>
                                 <th>
                                     Action
+                                    <a href="{{ url_for('client_debt_create_page') }}" class="btn btn-primary float-right ml-2">Get</a>
+                                    <a href="{{ url_for('client_table_page') }}" class="btn btn-secondary float-right ml-2">Table</a>
                                     <a href="{{ url_for('client_create_page') }}" class="btn btn-success float-right">Add</a>
                                 </th>
                             </tr>
@@ -79,9 +96,18 @@ Client List Page
                                 <tr>
                                     <td>{{ loop.index }}</td>
                                     <td>{{ client.full_name }}</td>
-                                    <td>{{ client.phone_number }}</td>
+                                    {% set client_total = namespace(total=0) %}
+
+                                    {% for client_debt in client_debt_list %}
+                                        {% if client_debt.user_id == client.id %}
+                                            {% set client_total.total = client_total.total + client_debt.lom %}
+                                        {% endif %}
+                                    {% endfor %}
+
+                                    <td>{{ (client_total.total)|round(2) }}</td>
                                     <td>{{ client.role }}</td>
                                     <td>{{ client.created_at.strftime('%Y-%m-%d %H:%M:%S') }}</td>
+                                    <td>{{ client.phone_number }}</td>
                                     <td>
                                         <a href="{{ url_for('client_delete_page', client_id=client.id) }}" class="btn btn-danger">Delete</a>
                                         <a href="{{ url_for('client_update_page', client_id=client.id) }}" class="btn btn-warning">Update</a>
