--- a/templates/user/dealer_get.html
+++ b/templates/user/dealer_get.html
@@ -138,7 +138,7 @@ Dealer Get Page
                                         <td>{{ loop.index }}</td>
                                         <td>{{ invoice.invoice_number }}</td>
                                         <td>{{ invoice.status }}</td>
-                                        <td>{{ invoice.total_price }}</td>
+                                        <td>{{ invoice.total_price|round(2) }}</td>
                                         <td>{{ invoice.created_at.strftime('%Y-%m-%d %H:%M:%S') }}</td>
                                         <td>
                                             <a href="{{ url_for('invoice_delete_page', invoice_id=invoice.id) }}" class="btn btn-danger">Delete</a>
